feat(CICD): fixing unclosed quote

--- a/.github/workflows/frontend-notify.yml
+++ b/.github/workflows/frontend-notify.yml
@@ -101,14 +101,14 @@ jobs:
         id: resolve-actions
         run: |
           if [[ '${{ github.event.action == 'edited' }}' == 'true' ]]; then
-            actions="${{ toJSON(steps.body-technology-check.outputs.actions) }}"
+            actions=${{ toJSON(steps.body-technology-check.outputs.actions) }}
           elif [[ '${{ github.event.action == 'labeled' }}' == 'true' ]]; then
-            actions="${{ toJSON(steps.label-technology-check.outputs.actions) }}"
+            actions=${{ toJSON(steps.label-technology-check.outputs.actions) }}
           else
             actions='[]'
           fi
           
-          [[ "${actions}" == 'null ]] && actions='[]'
+          [[ "${actions}" == 'null' ]] && actions='[]'
 
           echo "actions: ${actions}"
           echo "actions=${actions}" >> $GITHUB_OUTPUT
