--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@dotcms/client": "0.0.1-alpha.25",
-    "@dotcms/angular": "0.0.1-alpha.25"
+    "@dotcms/angular": "0.0.1-alpha.25",
     "@tinymce/tinymce-angular": "^8.0.0"
   },
   "devDependencies": {
