--- a/.github/workflows/reusable-sonarqube.yml
+++ b/.github/workflows/reusable-sonarqube.yml
@@ -29,6 +29,7 @@ jobs:
           artifacts-from: ${{ inputs.artifact-run-id }}
           restore-classes: true
           require-master: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           cache-sonar: true
           java-version: 21.0.3-ms # does not work with java 11, remove once we are on java 21
           maven-args: -Dsonar.ws.timeout=180 -Dsonar.log.level=DEBUG org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=dotCMS_core_AYSbIemxK43eThAXTlt- -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.token=${{ secrets.SONAR_TOKEN }}
