--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -4641,6 +4641,7 @@ unable-to-save-action=Unable to save the Workflow Action
 Unable-to-save-Scheme=Unable to save the Workflow Scheme
 unable-to-save-scheme=Unable to save the Workflow Scheme
 Unable-to-save-subaction=Unable to save Sub-action
+Only-Batch-Actions=You have added an actionlet which can only be used for batch workflow actions only on listing/batch
 unarchive-host-confirm=Are you sure you want to unarchive this Site?
 Unarchive-Host=Unarchive Site
 Unarchive=Unarchive
