missing needs declaration preventing artifact-run-id being passed

--- a/.github/workflows/build-test-master.yml
+++ b/.github/workflows/build-test-master.yml
@@ -60,7 +60,7 @@ jobs:
     #
   build-cli:
     name: CLI Build
-    needs: [ test ]
+    needs: [ initialize,test ]
     if: always() && !failure() && !cancelled()
     uses: ./.github/workflows/cli-build-artifacts.yml
     with:
