--- a/.github/actions/setup-java/action.yml
+++ b/.github/actions/setup-java/action.yml
@@ -14,6 +14,28 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Restore Cache SDKMan install
+      id: restore-cache-sdkman
+      uses: actions/cache/restore@v4
+      with:
+        path: ~/.sdkman
+        key: ${{ runner.os }}-${{ env.ARCHITECTURE }}-sdkman-install-${{ steps.get-requested-version.outputs.requested_version }}
+    - name: Install SDKMan
+      id: install-sdkman
+      if: ${{ steps.restore-cache-sdkman.outputs.cache-hit != 'true' }}
+      shell: bash
+      run: |
+        if [ ! -f "$HOME/.sdkman/bin/sdkman-init.sh" ]; then
+        echo "Downloading SDKMAN install"
+        curl -s "https://get.sdkman.io" | bash
+        fi
+    - name: Save Cache SDKMan install
+      id: save-cache-sdkman
+      if: ${{ steps.restore-cache-sdkman.outputs.cache-hit != 'true' }}
+      uses: actions/cache/save@v4
+      with:
+        path: ~/.sdkman
+        key: ${{ runner.os }}-${{ env.ARCHITECTURE }}-sdkman-install-${{ steps.get-requested-version.outputs.requested_version }}
     - name: Determine Architecture
       id: determine-arch
       shell: bash
@@ -50,11 +72,6 @@ runs:
       shell: bash
       run: |
         DEFAULT_GRAALVM="21.0.2-graalce"
-
-        if [ ! -f "$HOME/.sdkman/bin/sdkman-init.sh" ]; then
-          echo "Using sdkman to install SDKMAN"
-          curl -s "https://get.sdkman.io" | bash
-        fi
         
         source "$HOME/.sdkman/bin/sdkman-init.sh"
 
