--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5753,4 +5753,5 @@ edit.content.category-field.list.show.less=Less
 edit.content.category-field.search.name=Name
 edit.content.category-field.search.assignee=Category Path
 edit.content.category-field.search.input.placeholder=Search
+edit.content.category-field.category.root-name=Root
 
