--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -1223,6 +1223,11 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-sse</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+        </dependency>
+
 
         <dependency>
             <!-- Immutables is a Java annotation processor to eliminate the burden of writing immutable types.
