--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5751,6 +5751,7 @@ edit.content.category-field.list.show.more={0} More
 edit.content.category-field.list.show.less=Less
 
 edit.content.category-field.search.name=Name
-edit.content.category-field.search.assignee=Assignee
+edit.content.category-field.search.assignee=Category Path
 edit.content.category-field.search.input.placeholder=Search
+edit.content.category-field.category.root-name=Root
 
