chore: apply prettier

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -34,8 +34,8 @@
         "affected:lint": "nx affected:lint",
         "affected:dep-graph": "nx affected:dep-graph",
         "affected": "nx affected",
-        "format": "prettier --write ./",
-        "format:write": "prettier --write ./",
+        "format": "prettier --write ./ ",
+        "format:write": "prettier --log-level silent --write ./",
         "format:check": "prettier --check ./",
         "dep-graph": "nx dep-graph",
         "prepare": "cd .. && node core-web/prepare.js",
