--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -975,13 +975,6 @@
         </dependency>
 
 
-        <!-- JAX-RS Rest API -->
-
-        <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <scope>compile</scope>
-        </dependency>
 
         <!-- Rest API Documentation -->
         <dependency>
@@ -1315,11 +1308,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility-proxy</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
@@ -1328,7 +1316,7 @@
         <dependency>
             <!-- Hamcrest is a framework for writing matcher objects allowing 'match' rules to be defined declaratively. -->
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <artifactId>hamcrest</artifactId>
             <!-- often just used for testing we have in production code -->
             <scope>compile</scope>
         </dependency>
