fix(edit-content): Binary field label btn

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -1153,7 +1153,7 @@ dotcms.api.error.bad_request=Bad Request
 dot.binary.field.action.choose.file=Choose File
 dot.binary.field.action.create.new.file=Create New File
 dot.binary.field.action.create.new.file.label=File Name
-dot.binary.field.action.generate.with.dotai=Generate with dotAI
+dot.binary.field.action.generate.with.dotai=Generate With dotAI
 dot.binary.field.action.generate.with.tooltip=Please configure dotAI to enable this feature
 dot.binary.field.action.import.from.url=Import from URL
 dot.binary.field.action.import.from.url.error.message=The URL you requested is not valid. Please try again.
