--- a/nodejs-parent/pom.xml
+++ b/nodejs-parent/pom.xml
@@ -12,7 +12,7 @@
     <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <node.js.version>v18.20.3</node.js.version>
+        <node.js.version>v20.14.0</node.js.version>
         <yarn.version>v1.22.19</yarn.version>
     </properties>
     <build>
@@ -66,7 +66,9 @@
                         <configuration>
                             <target>
                                 echo "Using node.js ${node.js.version}" for project default
-                                <echo append="false" file="${maven.multiModuleProjectDirectory}/.nvmrc">${node.js.version}</echo>
+                                <echo append="false" file="${maven.multiModuleProjectDirectory}/.nvmrc">
+                                    ${node.js.version}
+                                </echo>
                             </target>
                         </configuration>
                         <goals>
