fix small message for empty contentlets

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -1341,6 +1341,7 @@ edit.ema.page.dropzone.one.max.contentlet=Only <strong>1</strong> item can be st
 edit.ema.page.executing.workflow.action=Executing workflow action...
 edit.ema.page.error.executing.workflow.action=Unable to execute workflow action
 edit.ema.page.no.workflow.action=No Workflow Actions
+edit.ema.empty.palette=No contentlets available
 editpage.action.cancel=Cancel
 editpage.action.delete=Delete
 editpage.action.save=Save
