--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -10,7 +10,7 @@ jobs:
 
   scanner:
     if: (github.event.schedule == '0 3 1,15 * *') || (github.event.workflow_dispatch)
-    runs-on: [self-hosted, linux, x64, ubuntu-server]
+    runs-on: [self-hosted, linux, x64]
 
     steps:
       - name: Start dotCMS with docker
